# multi-cloud-retail-analytics-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
airflow/: Dockerfile
airflow/dags/: health_check_dag.py  retail_analytics_e2e_dag.py
api/: Dockerfile
api/app/: main.py
api/app/core/: config.py
api/app/db/: connection.py
api/app/routes/: __init__.py  campaigns.py  customers.py  health.py  inventory.py  kpis.py  products.py  revenue.py
api/app/schemas/: responses.py
api/app/services/: reporting_service.py
config/: datasets.yml
data/manifests/: bronze_ingestion_manifest_20260503T035209Z.json
docs/: data_model.md  local_development.md  pipeline_design.md
infrastructure/docker/postgres/init/: 01-init-databases.sql
ingestion/: generate_retail_data.py  ingest_to_object_storage.py  schemas.py
scripts/: __init__.py  init_local_warehouse.py  load_bronze_warehouse.py  run_gold_transformations.py  run_silver_transformations.py  verify_api_container.py  verify_api_queries.py  verify_gold_tables.py  verify_local_warehouse.py  verify_minio_storage.py  verify_silver_tables.py
storage/: exceptions.py  minio_client.py  object_storage_client.py
tests/unit/: test_bronze_ingestion.py  test_bronze_warehouse_loader.py  test_generate_retail_data.py  test_gold_transformations.py  test_local_warehouse_init.py  test_object_storage_paths.py
tests/unit/python scripts/: verify_api_queries.py
transformations/gold/: 001_transform_silver_to_gold.sql
transformations/silver/: 001_transform_bronze_to_silver.sql
warehouse/local_postgres/: __init__.py
warehouse/local_postgres/ddl/: 001_create_warehouse_schemas.sql  002_create_silver_tables.sql  003_create_gold_tables.sql
warehouse/local_postgres/load/: __init__.py  bronze_loader.py
