[project]
name = "multi-cloud-retail-analytics-platform"
version = "0.1.0"
description = "A multi-cloud retail analytics data platform using Airflow, S3/MinIO, Redshift, GCS, BigQuery, FastAPI, Docker, and Jenkins."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aditya Bhandari" }
]

dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]

storage = [
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.16.0",
]

warehouse = [
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "snowflake-connector-python>=3.10.0",
    "google-cloud-bigquery>=3.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.mypy]
python_version = "3.13.3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]